# nmai-2026

./: .gitignore  LICENSE
astar_island/: .gitignore  CLAUDE.md  MECHANICS.md  README.md  TODO.md  pyproject.toml  simulator_viz.html
astar_island/astar-rs/: Cargo.toml
astar_island/data-analysis/: analyze_defense_drop_isolated.py  analyze_defense_recovery.py  analyze_food_deep.py  analyze_food_production.py  analyze_food_v10.py  analyze_food_v11.py  analyze_food_v2.py  analyze_food_v3.py  analyze_food_v4.py  analyze_food_v5.py  analyze_food_v6.py  analyze_food_v7.py  analyze_food_v8.py  analyze_food_v9.py  analyze_raids.py  analyze_raids_deep.py  analyze_raids_v2.py  analyze_spawn.py  analyze_spawn_pspawn.py  analyze_wealth.py  analyze_wealth_radius.py  analyze_wealth_v2.py  analyze_winter_food.py  analyze_worst_modeled.py  characterize_outliers.py  characterize_weather.py  explain_residual.py  explain_residual2.py  final_food_formula.py  grid_search_coeffs.py  load_replays.py  nail_formula.py  optimize_coeffs.py  outlier_nonlinearity.py  pair_analysis.py  plot_defense_recovery.py  plot_food_clean.py  plot_food_curves.py  plot_food_outliers.py  plot_food_proof.py  (+14 more)
astar_island/docs/: astar_island_analysis.aux  astar_island_analysis.out  astar_island_analysis.tex
astar_island/frontend/: .gitignore  index.html  package.json  tsconfig.node.json  tsconfig.node.tsbuildinfo
astar_island/simulator/: Cargo.toml  output.txt  output2.txt  output3.txt  output4.txt
astar_island/track-best-algorithms/: RESULTS.md
norgesgruppen/: .gitignore  CLAUDE.md  OVERVIEW.md  README.md  analyze_holdout_errors.py  classification_analysis.py  classification_error_analysis.md  extract_false_positives.py  generate_synthetic_shelves.py  hillclimbing.md  pyproject.toml  score_holdout.py  visualize_holdout.py  visualize_predictions.py
norgesgruppen/runs/: 001_verify_harness.sh  002_xxlarge_h100_full.sh  003_xxlarge_h100_nopatch.sh  004_xxlarge_h100_randomcrop.sh  005_class_weighted_loss.sh  005_xxlarge_h100_copypaste.sh  007_xxlarge_cleaned_v2.sh  008_cleanedv2_classweight_maxdim4k_lr5e4.sh  009_submission_banker.sh  010_submission_banker_copypaste.sh  011_xxlarge_h100_synthetic.sh  012_yolo26x_h100.sh  013_submission_synthetic.sh
norgesgruppen/submission/: run.py
norgesgruppen/submission_yolo/: run.py
norgesgruppen/tests/: test_patching.py  test_split.py
tripletex/: Dockerfile  README.md  auto-submitter.py  conftest.py  make-test-request.py  pyproject.toml  request_mapping.md  server.sh  test_competition.py
tripletex/data/: task_types.md
tripletex/prompts/: openai_pro_find_openapi_calls.md
(+1794 files in other folders)
